--- a/suse-ai/ollama/fleet.yaml
+++ b/suse-ai/ollama/fleet.yaml
@@ -2,7 +2,7 @@
 namespace: suseai
 
 helm:
-  # helmSecretName: basic-auth-secret
+  helmSecretName: basic-auth-secret
   ociRegistry:
     authSecretName: application-collection
     basicHTTP: false
