--- a/suse-ai/open-webui/fleet.yaml
+++ b/suse-ai/open-webui/fleet.yaml
@@ -2,7 +2,7 @@
 namespace: suseai
 
 helm:
-  # helmSecretName: basic-auth-secret
+  helmSecretName: basic-auth-secret
   ociRegistry:
     reference: https://dp.apps.rancher.io/v2/
     authSecretName: application-collection
