--- a/suse-ai/open-webui/fleet.yaml
+++ b/suse-ai/open-webui/fleet.yaml
@@ -2,12 +2,12 @@
 namespace: suseai
 
 helm:
-  helmSecretName: basic-auth-secret
-  ociRegistry:
-    reference: https://dp.apps.rancher.io/v2/
-    authSecretName: application-collection
-    basicHTTP: false
-  chart: "oci://dp.apps.rancher.io/charts/open-webui"
+  # helmSecretName: basic-auth-secret
+  # ociRegistry:
+  #   reference: https://dp.apps.rancher.io/v2/
+  #   authSecretName: application-collection
+  #   basicHTTP: true
+  chart: "https://apps.rancher.io/applications/open-webui"
   version: "5.16.0"  
   valuesFiles:
     - owui-values.yaml
