--- a/suse-ai/ollama/fleet.yaml
+++ b/suse-ai/ollama/fleet.yaml
@@ -7,7 +7,7 @@ helm:
 #     authSecretName: application-collection
 #     basicHTTP: true
 
-  chart: "https://dp.apps.rancher.io/applications/ollama"
+  chart: "dp.apps.rancher.io/charts/ollama"
   version: "1.16.0"
  
   valuesFiles:
