--- a/Chart.yaml
+++ b/Chart.yaml
@@ -9,17 +9,17 @@ type: application #The type of the chart (optional)
 home: https://suse.com/products/ai
 # sources:
 #   - A list of URLs to source code for this project (optional)
-dependencies: # A list of the chart requirements (optional)
-  - name: The name of the chart (nginx)
-    version: The version of the chart ("1.2.3")
-    repository: (optional) The repository URL ("https://example.com/charts") or alias ("@repo-name")
-    condition: (optional) A yaml path that resolves to a boolean, used for enabling/disabling charts (e.g. subchart1.enabled )
-    tags: # (optional)
-      - AI
-      - AIOps #Tags can be used to group charts for enabling/disabling together
-    import-values: # (optional)
-      - ImportValues holds the mapping of source values to parent key to be imported. Each item can be a string or pair of child/parent sublist items.
-    alias: (optional) Alias to be used for the chart. Useful when you have to add the same chart multiple times
+# dependencies: # A list of the chart requirements (optional)
+#   - name: The name of the chart (nginx)
+#     version: The version of the chart ("1.2.3")
+#     repository: (optional) The repository URL ("https://example.com/charts") or alias ("@repo-name")
+#     condition: (optional) A yaml path that resolves to a boolean, used for enabling/disabling charts (e.g. subchart1.enabled )
+#     tags: # (optional)
+#       - AI
+#       - AIOps #Tags can be used to group charts for enabling/disabling together
+#     import-values: # (optional)
+#       - ImportValues holds the mapping of source values to parent key to be imported. Each item can be a string or pair of child/parent sublist items.
+#     alias: (optional) Alias to be used for the chart. Useful when you have to add the same chart multiple times
 maintainers: # (optional)
   - name:  Alessandro Festa #The maintainers name (required for each maintainer)
     email: alessandro.festa1@suse.com #The maintainers email (optional for each maintainer)
