--- a/Chart.yaml
+++ b/Chart.yaml
@@ -7,19 +7,27 @@ type: application #The type of the chart (optional)
 # keywords:
 #   - A list of keywords about this project (optional)
 home: https://suse.com/products/ai
-# sources:
-#   - A list of URLs to source code for this project (optional)
-# dependencies: # A list of the chart requirements (optional)
-#   - name: The name of the chart (nginx)
-#     version: The version of the chart ("1.2.3")
-#     repository: (optional) The repository URL ("https://example.com/charts") or alias ("@repo-name")
-#     condition: (optional) A yaml path that resolves to a boolean, used for enabling/disabling charts (e.g. subchart1.enabled )
-#     tags: # (optional)
-#       - AI
-#       - AIOps #Tags can be used to group charts for enabling/disabling together
-#     import-values: # (optional)
-#       - ImportValues holds the mapping of source values to parent key to be imported. Each item can be a string or pair of child/parent sublist items.
-#     alias: (optional) Alias to be used for the chart. Useful when you have to add the same chart multiple times
+dependencies:
+  - name: milvus
+    repository: oci://dp.apps.rancher.io/charts
+    version: 4.2.2
+    condition: milvus.enabled
+  - name: ollama
+    version: 1.26.0
+    repository: oci://dp.apps.rancher.io/charts
+    condition: ollama.enabled
+  - name: open-webui
+    version: 7.2.0
+    repository: oci://dp.apps.rancher.io/charts
+    condition: open-webui.enabled
+  - name: pytorch
+    version: 0.2.0
+    repository: oci://dp.apps.rancher.io/charts
+    condition: pytorch.enabled
+  - name: mlflow
+    version: 3.3.2
+    repository: oci://dp.apps.rancher.io/charts
+    condition: mlflow.enabled
 maintainers: # (optional)
   - name:  Alessandro Festa #The maintainers name (required for each maintainer)
     email: alessandro.festa1@suse.com #The maintainers email (optional for each maintainer)
