--- a/fleet.yaml
+++ b/fleet.yaml
@@ -1,20 +1,24 @@
-defaultNamespace: suseai
+kind: GitRepo
+apiVersion: fleet.cattle.io/v1alpha1
+metadata:
+  name: helm
+  namespace: fleet-local
 spec:
   repo: https://github.com/rancher/fleet-examples
   paths:
-  - charts
-helm:
-  releaseName: suse-ai
-  chart: "."
-  version: ""
-  force: false
-  timeoutSeconds: 0
-  targetNamespace: suseai
-  values:
-    global:
-      imagePullSecrets: [ "application-collection" ]
-  valuesFrom:
-    - configMapKeyRef:
-        name: suse-private-ai-values
-        namespace: suse-private-ai
-        key: values.yaml
+  - single-cluster/helm-multi-chart
+# helm:
+#   releaseName: suse-ai
+#   chart: "."
+#   version: ""
+#   force: false
+#   timeoutSeconds: 0
+#   targetNamespace: suseai
+#   values:
+#     global:
+#       imagePullSecrets: [ "application-collection" ]
+#   valuesFrom:
+#     - configMapKeyRef:
+#         name: suse-private-ai-values
+#         namespace: suse-private-ai
+#         key: values.yaml
